ci/kube-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: shipping-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shipping-service-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shipping-service
        version: v1
    spec:
      containers:
      - name: shipping-service
        image: IMAGE_URI
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
      imagePullSecrets:
        - name: new-secret
